--- a/Tree/Tree.vcxproj
+++ b/Tree/Tree.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TreeNode.hpp" />
+    <ClInclude Include="TreeNode.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
